--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/clairesgym
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/clairesgym
+#spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/clairesgym
+spring.datasource.url=jdbc:mysql://localhost:3306/clairesgym
 spring.datasource.username=root
 spring.datasource.password=ghuyt853
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -9,3 +9,7 @@ logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.mvc.format.date=yyyy-mm-dd
+
+#JPA is a specification for Java developers to interact with databases using object-relational mapping (ORM) techniques.
+#SQL is a language used to manage relational databases.
+#JDBC is a technology that provides connectivity between Java applications and databases, using drivers specific to each database system
